--- a/assets/index.html
+++ b/assets/index.html
@@ -3,11 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>receita de banoffee</title>
+    <title>receita de omelete</title>
 </head>
 <body>
     <div>
      <img src="./image-omelette.jpeg" alt="imagen de um omelete recheado de folhas verdes e legumes">
+      
+    <h1>Receita de omelete simples</h1>
+    <p>Um prato fácil e rápido, perfeito para qualquer refeição. Esta omelete clássica combina ovos batidos cozidos à perfeição, opcionalmente recheados com sua escolha de queijo, legumes ou carnes.</p>
+
+    <h2>Tempo de preparo</h2>
+
+        <ul>
+            <li>
+                <strong>Total:</strong> Aproximadamente 10 minutos
+            </li>
+            <li>
+                <strong>Preparo</strong> 5 minutos
+           </li>
+            <li>
+                 <strong>Cozimento:</strong> 5 minutos
+            </li>
+      </ul>
     </div>
+       <h2>Tempo de preparo</h2>
+
+       <ul>
+            <li>
+                <strong>Total:</strong> Aproximadamente 10 minutos
+            </li>
+            <li>
+                <strong>Preparo</strong> 5 minutos
+            </li>
+            <li>
+                 <strong>Cozimento:</strong> 5 minutos
+            </li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
